src/App.css
/* ... */
.login__header,
.register__header {
  cursor: pointer;
}

.login__header--selected,
.register__header--selected {
  border-bottom: 4px solid var(--color-blue-dark);
  font-weight: 600;
  cursor: auto;
}

.forgot-password__text {
  font-family: 'Titillium Web', sans-serif;
  font-weight: 400;
  font-size: 16px;
  letter-spacing: 0.04em;
  color: var(--color-grey);
}

.login__email,
.login__password,
.register__username,
.register__email,
.register__password,
.register__password2,
.forgot-password__email {
  font-size: 16px;
  line-height: 1.75;
  margin-top: 46px;
  padding: 0 8px;
  width: 100%;
  border: none;
  border-bottom: 2px solid var(--color-blue-dark);
  color: var(--color-grey);
  background-color: var(--color-background);
}

.login__email-error,
.login__password-error,
.register__username-error,
.register__email-error,
.register__password-error,
.register__password2-error,
.forgot-password__email-error {
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.75;
  width: 100%;
  color: var(--color-georgia-peach);
}

.register__success,
.forgot-password__email-success {
  font-size: 16px;
  font-weight: 500;
  letter-spacing: 0.02em;
  line-height: 1.5;
  width: 100%;
  color: var(--color-green);
}

.login__submit,
.register__submit,
.forgot-password__submit {
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  font-size: 16px;
  padding: 12px 45px;
  margin-top: 60px;
  margin-bottom: 20px;
  border-radius: 25px;
  border-color: var(--color-blue-dark);
  background-color: var(--color-blue-dark);
  color: var(--color-login);
  cursor: pointer;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1),
              0 10px 20px 0 rgba(0, 0, 0, 0.2);
}

.login__submit:hover,
.register__submit:hover,
.forgot-password__submit:hover {
  transform: translate(-50%, -1%);
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15),
              0 4px 8px 0 rgba(0, 0, 0, 0.25);
}

.login__forgot-passwordblock {
  text-align: center;
}

.login__forgot-password {
  font-family: 'Roboto Condensed', sans-serif;
  /* font-family: 'Source Sans Pro', sans-serif; */
  font-size: 16px;
  letter-spacing: 0.1em;
  color: var(--color-grey);
  cursor: pointer;
}

.login__forgot-password:hover {
  color: var(--color-blue-grey-light);
}

.login__email::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__email::-moz-placeholder { /* Firefox 19+ */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__email:-ms-input-placeholder { /* IE 10+ */
  font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__email::input-placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__email::placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__password::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__password::-moz-placeholder { /* Firefox 19+ */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__password:-ms-input-placeholder { /* IE 10+ */
  font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__password::input-placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.login__password::placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__username::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__username::-moz-placeholder { /* Firefox 19+ */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__username:-ms-input-placeholder { /* IE 10+ */
  font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__username::input-placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__username::placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__email::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__email::-moz-placeholder { /* Firefox 19+ */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__email:-ms-input-placeholder { /* IE 10+ */
  font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__email::input-placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__email::placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password::-moz-placeholder { /* Firefox 19+ */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password:-ms-input-placeholder { /* IE 10+ */
  font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password::input-placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password::placeholder {
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password2::-webkit-input-placeholder { /* Chrome/Opera/Safari */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password2::-moz-placeholder { /* Firefox 19+ */
	font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}

.register__password2:-ms-input-placeholder { /* IE 10+ */
  font-style: italic;
	font-weight: 300;
	color: var(--color-grey-lighter);
}
/* ... */

